<resources>
    <string name="app_name">MangmApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>


    <!-- Home Screen -->
    <string name="portfolio_title">Portfolio Value</string>
    <string name="grams_title">Grams</string>
    <string name="pl_title">P/L</string>
    <string name="graph_tab">Overview</string>
    <string name="history_tab">History</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>




    // Investing in Gold bottom sheet
    <string name="investing_in_gold">Investing in Gold</string>
    <string name="you_can_buy">You can buy and sell gold at any time from as minimum as 0.1 gram</string>
    <string name="gold_price_term">Gold price goes up and down, so you can follow up the prices from the graph</string>
    <string name="balance_term">The money will be deducted from your balance if you buy gold &amp; will be added to your balance if you sell it </string>
    <string name="receiving_term">You won\u2019t be able to physically receive your invested gold unless it\u2019s 8 grams</string>
    <string name="security_term">Your invested gold will be securely stored by our partner <b>\u201cMngm\u201d</b></string>
    <string name="lbl_i_understand">I Understand</string>
    <string name="limit_price">Max EGP 100,000 </string>
    <string name="msg_you_can_buy_gold">You can buy gold from as minimum as 0.1 gram</string>
    <string name="msg_1_gram_2_966">1 Gram = 2,966.98 EGP</string>
    <string name="msg_the_maximum_amount">The maximum amount to buy gold is 50,000 EGP per day</string>
    <string name="lbl_gram">Gram</string>
    <string name="lbl_balance">Balance</string>
    <string name="lbl_egp">EGP</string>
    <string name="lbl_grams">Grams</string>
    <string name="lbl_net_price">Net Price</string>
    <string name="lbl_estimated_fees">Estimated Fees</string>
    <string name="lbl_execution_price">Execution Price</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="msg_price_variation">Your balance will be deducted after you submit, There might be a slight variation from the price shown above if the gold price goes up at this moment</string>

</resources>