<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/portfolio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/portfolioTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_title"
                android:textAlignment="viewStart"
                android:textColor="@color/lightGray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/portfolioValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAlignment="viewStart"
                android:textColor="@color/darkGray"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/portfolioTitle"
                tools:text="0.00 EGP" />

            <TextView
                android:id="@+id/gramsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/grams_title"
                android:textColor="@color/lightGray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/portfolioValue" />

            <TextView
                android:id="@+id/gramsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/darkGray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gramsTitle"
                tools:text="0 Grams" />

            <View
                android:id="@+id/verticalLine"
                android:layout_width="2dp"
                android:layout_height="38dp"
                android:background="@color/dashLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/gramsTitle"
                app:layout_constraintTop_toTopOf="@id/gramsTitle" />

            <TextView
                android:id="@+id/pLTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/pl_title"
                android:textColor="@color/lightGray"
                app:layout_constraintStart_toEndOf="@+id/verticalLine"
                app:layout_constraintTop_toTopOf="@+id/verticalLine" />

            <TextView
                android:id="@+id/pLValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/darkGray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/pLTitle"
                app:layout_constraintTop_toBottomOf="@id/pLTitle"
                tools:text="0.00 EGP" />

            <ImageView
                android:id="@+id/viewMoreIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/view_more"
                android:layout_marginEnd="62dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pLTitle" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>